Replace Sigmoid Gate with simple homework model for feature importance
- Use simple sequential model from homework (16 hidden units, no gate layer)
- Calculate feature importance from first layer weight magnitudes
- Remove broken sigmoid gate implementation that wasn't learning properly
- Update documentation to reflect weight-based importance method
- Match model architecture from week2 homework exactly

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
         </section>
 
         <section id="feature-importance">
-            <h2>6. Feature Importance (Sigmoid Gate)</h2>
+            <h2>6. Feature Importance</h2>
             <div id="feature-importance-output"></div>
             <div class="note">
-                <p><strong>About Feature Importance:</strong> The sigmoid gate layer learns which features are most important for prediction.
-                Higher scores (closer to 1.0) indicate features the model relies on more heavily, while lower scores (closer to 0.0) indicate less important features.</p>
+                <p><strong>About Feature Importance:</strong> Feature importance is calculated from the magnitude of weights in the first hidden layer.
+                Higher scores indicate features the model relies on more heavily for making predictions.</p>
             </div>
         </section>
 
